--- a/ezDates/web/index.html
+++ b/ezDates/web/index.html
@@ -24,15 +24,27 @@
 </head>
 
 <body>
-    <div class="container-fluid">
+    <div class="container-header">
         <div id="page-header"></div>
-        <div class="row my-4 py-4" id="feed">
-            <div id="errors"></div>
-        </div>
         <script>
             include("header.html", "#page-header");
         </script>
     </div>
+
+    <div class="container-content">
+        <h2>Dios no existe jeje</h2>
+    </div>
+
+    <footer>
+
+        <div id="page-footer"></div>
+        <script>
+            include("footer.html", "#page-footer");
+        </script>
+
+
+    </footer>
 </body>
+
 
 </html>
