--- a/ezDates/web/login.html
+++ b/ezDates/web/login.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="css/registro.css">
+    <link rel="stylesheet" href="css/login.css">
     <script src="/js/utils/include.js"></script>
     
 
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-    <div class="container-fluid-register">
+    <div class="container-fluid-login">
         <div id="page-header"></div>
         <div class="row my-4 py-4" id="feed">
             <div id="errors"></div>
@@ -32,18 +32,17 @@
 
         <body class="dark"></body>
 
-
+        
         <p>
-        <div class="container">
-            <div class="row text-center">
-                <div class="col-md">
-                    <h3>Accede a tu cuenta</h3>
-                </div>
-                <hr>
-            </div>
-
+        <div class="container-login">
             <form id="login-form">
-                <div class="registro" >
+                <div class="login" >
+                    <div class="row text-center">
+                        <div class="col-md">
+                            <h3>Accede a tu cuenta</h3>
+                        </div>
+                        <hr>
+                    </div>
                     <div class="form-group col-md-6">
                         <div class="input-group form-group">
                             <div class="input-group-prepend">
