--- a/ezDates/web/fotos_trending.html
+++ b/ezDates/web/fotos_trending.html
@@ -8,9 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/fotos_trending.css">
     <script src="/js/utils/include.js"></script>
-
+    <script src="/js/renderers/fotos_trending.js"></script>
     <title>Ez-Dates: Tu App de citas</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -18,8 +18,8 @@
     <link rel="stylesheet" href="/css/font-awesome.min.css">
     <script src="/js/libs/jquery-3.4.1.min.js"></script>
     <script src="/js/libs/bootstrap.min.js"></script>
-    <script type="module" src="/js/index.js"></script>
     <script src="js/libs/axios.min.js"></script>
+    
 </head>
 
 <body>
@@ -31,7 +31,11 @@
     </div>
 
     <div class="container-content">
-        <h2>Dios no existe jeje</h2>
+        <h2>Fotos Trending</h2>
+        <main>
+            <div id="fotos_trending"></div>
+        </main>
+        
     </div>
 
     <footer>
