--- a/ezDates/web/header.html
+++ b/ezDates/web/header.html
@@ -19,7 +19,7 @@
                 <div class="navbar-collapse left">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="register.html">Fotos Trending</a>
+                            <a class="nav-link" href="fotos_trending.html">Fotos Trending</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="login.html">Usuarios Trending</a>
