--- a/ezDates/web/usuarios_trending.html
+++ b/ezDates/web/usuarios_trending.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/fotos_trending.css">
     <script src="/js/utils/include.js"></script>
-    <script type="module" src="/js/fotos_trending.js"></script>
+    <script type="module" src="/js/usuarios_trending.js"></script>
     <title>Ez-Dates: Tu App de citas</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -30,9 +30,9 @@
     </div>
 
     <div class="container-content">
-        <h2>Fotos Trending</h2>
+        <h2>Usuarios Trending</h2>
         <main>
-            <div id="fotos_trending"></div>
+            <div id="usuarios_trending"></div>
         </main>
         
     </div>
