--- a/ezDates/web/header.html
+++ b/ezDates/web/header.html
@@ -22,7 +22,7 @@
                             <a class="nav-link" href="fotos_trending.html">Fotos Trending</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="prueba.html">Usuarios Trending</a>
+                            <a class="nav-link" href="usuarios_trending.html">Usuarios Trending</a>
                         </li>
                     </ul>
                 </div>
