--- a/ezDates/web/register.html
+++ b/ezDates/web/register.html
@@ -100,8 +100,8 @@
                     <div class="col-md">
                         <div class="form-group">
                             <label for="password-input">Repeat Password:</label>
-                            <input type="password" class="form-control text-light bg-dark" id="password-input"
-                                name="password" placeholder="Repeat Password">
+                            <input type="password" class="form-control text-light bg-dark" id="password2-input"
+                                name="password2" placeholder="Repeat Password">
                         </div>
                     </div>
                 </div>
