--- a/ezDates/web/register.html
+++ b/ezDates/web/register.html
@@ -66,7 +66,7 @@
                     <div class="col-md">
                         <div class="form-group">
                             <label for="email-input">Email:</label>
-                            <input type="email" class="form-control text-light bg-dark" id="email-input" name="email"
+                            <input type="text" class="form-control text-light bg-dark" id="email-input" name="email"
                                 placeholder="Email">
                         </div>
                     </div>
@@ -78,6 +78,28 @@
                                 placeholder="Phone">
                         </div>
                     </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md">
+                        <div class="form-group">
+                            <label for="gender-select">Gender:</label>
+                            <select class="form-control text-light bg-dark" id="gender-select" name="gender">
+                                <option value="male">Male</option>
+                                <option value="female">Female</option>
+                                <option value="other">Other</option>
+                            </select>
+                        </div>
+                    </div>
+
+                    <div class="col-md">
+                        <div class="form-group">
+                            <label for="birthdate-input">Date of Birth:</label>
+                            <input type="date" class="form-control text-light bg-dark" id="birthdate-input"
+                                name="birthdate">
+                        </div>
+                    </div>
+
                 </div>
 
                 <div class="row">
@@ -104,12 +126,23 @@
                                 name="password2" placeholder="Repeat Password">
                         </div>
                     </div>
+
+
+
+
+
                 </div>
 
-                <div class="row">
-                    <div class="col-md text-center">
-                        <button type="submit" class="btn btn-primary">Register</button>
+
+
+                <div class="boton-registro">
+                    <div class="row">
+
+                        <div class="col-md text-center">
+                            <button type="submit" class="btn btn-primary">Register</button>
+                        </div>
                     </div>
+
                 </div>
 
             </form>
