--- a/ezDates/web/register.html
+++ b/ezDates/web/register.html
@@ -33,7 +33,7 @@
         <body class="dark"></body>
 
 
-        <p>
+
         <div class="container">
             <div class="row text-center">
                 <div class="col-md">
@@ -42,106 +42,106 @@
                 <hr>
             </div>
 
+            <div class="card-body">
+                <form id="register-form">
+                    <div class="row">
+                        <div class="col-md">
+                            <div class="form-group">
+                                <label for="firstname-input">First name:</label>
+                                <input type="text" class="form-control text-light bg-dark" id="firstname-input"
+                                    name="firstName" placeholder="First name">
+                            </div>
+                        </div>
 
-            <form id="register-form">
-                <div class="row">
-                    <div class="col-md">
-                        <div class="form-group">
-                            <label for="firstname-input">First name:</label>
-                            <input type="text" class="form-control text-light bg-dark" id="firstname-input"
-                                name="firstName" placeholder="First name">
+                        <div class="col-md">
+                            <div class="form-group">
+                                <label for="lastname-input">Last name:</label>
+                                <input type="text" class="form-control text-light bg-dark" id="lastname-input"
+                                    name="lastName" placeholder="Last name">
+                            </div>
                         </div>
                     </div>
 
-                    <div class="col-md">
-                        <div class="form-group">
-                            <label for="lastname-input">Last name:</label>
-                            <input type="text" class="form-control text-light bg-dark" id="lastname-input"
-                                name="lastName" placeholder="Last name">
+                    <div class="row">
+                        <div class="col-md">
+                            <div class="form-group">
+                                <label for="email-input">Email:</label>
+                                <input type="text" class="form-control text-light bg-dark" id="email-input" name="email"
+                                    placeholder="Email">
+                            </div>
                         </div>
-                    </div>
-                </div>
 
-                <div class="row">
-                    <div class="col-md">
-                        <div class="form-group">
-                            <label for="email-input">Email:</label>
-                            <input type="text" class="form-control text-light bg-dark" id="email-input" name="email"
-                                placeholder="Email">
-                        </div>
-                    </div>
-
-                    <div class="col-md">
-                        <div class="form-group">
-                            <label for="phone-input">Phone:</label>
-                            <input type="tel" class="form-control text-light bg-dark" id="phone-input" name="phone"
-                                placeholder="Phone">
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-md">
-                        <div class="form-group">
-                            <label for="gender-select">Gender:</label>
-                            <select class="form-control text-light bg-dark" id="gender-select" name="gender">
-                                <option value="male">Male</option>
-                                <option value="female">Female</option>
-                                <option value="other">Other</option>
-                            </select>
+                        <div class="col-md">
+                            <div class="form-group">
+                                <label for="phone-input">Phone:</label>
+                                <input type="tel" class="form-control text-light bg-dark" id="phone-input" name="phone"
+                                    placeholder="Phone">
+                            </div>
                         </div>
                     </div>
 
-                    <div class="col-md">
-                        <div class="form-group">
-                            <label for="birthdate-input">Date of Birth:</label>
-                            <input type="date" class="form-control text-light bg-dark" id="birthdate-input"
-                                name="birthdate">
+                    <div class="row">
+                        <div class="col-md">
+                            <div class="form-group">
+                                <label for="gender-select">Gender:</label>
+                                <select class="form-control text-light bg-dark" id="gender-select" name="gender">
+                                    <option value="male">Male</option>
+                                    <option value="female">Female</option>
+                                    <option value="other">Other</option>
+                                </select>
+                            </div>
                         </div>
+
+                        <div class="col-md">
+                            <div class="form-group">
+                                <label for="birthdate-input">Date of Birth:</label>
+                                <input type="date" class="form-control text-light bg-dark" id="birthdate-input"
+                                    name="birthdate">
+                            </div>
+                        </div>
+
                     </div>
 
-                </div>
-
-                <div class="row">
-                    <div class="col-md">
-                        <div class="form-group">
-                            <label for="username-input">Username:</label>
-                            <input type="text" class="form-control text-light bg-dark" id="username-input"
-                                name="username" placeholder="Username">
+                    <div class="row">
+                        <div class="col-md">
+                            <div class="form-group">
+                                <label for="username-input">Username:</label>
+                                <input type="text" class="form-control text-light bg-dark" id="username-input"
+                                    name="username" placeholder="Username">
+                            </div>
                         </div>
+
+                        <div class="col-md">
+                            <div class="form-group">
+                                <label for="password-input">Password:</label>
+                                <input type="password" class="form-control text-light bg-dark" id="password-input"
+                                    name="password" placeholder="Password">
+                            </div>
+                        </div>
+
+                        <div class="col-md">
+                            <div class="form-group">
+                                <label for="password-input">Repeat Password:</label>
+                                <input type="password" class="form-control text-light bg-dark" id="password2-input"
+                                    name="password2" placeholder="Repeat Password">
+                            </div>
+                        </div>
+
                     </div>
 
-                    <div class="col-md">
-                        <div class="form-group">
-                            <label for="password-input">Password:</label>
-                            <input type="password" class="form-control text-light bg-dark" id="password-input"
-                                name="password" placeholder="Password">
+                    <div class="row">
+                        <div class="col-md">
+                            <div class="form-group">
+                                <label for="foto-input">Foto de perfil:</label>
+                                <input type="text" class="form-control text-light bg-dark" id="foto-input" name="foto"
+                                    placeholder="Indique la url de la foto">
+                            </div>
                         </div>
-                    </div>
-
-                    <div class="col-md">
-                        <div class="form-group">
-                            <label for="password-input">Repeat Password:</label>
-                            <input type="password" class="form-control text-light bg-dark" id="password2-input"
-                                name="password2" placeholder="Repeat Password">
-                        </div>
-                    </div>
-
-                </div>
-
-                <div class="row">
-                    <div class="col-md">
-                        <div class="form-group">
-                            <label for="foto-input">Foto de perfil:</label>
-                            <input type="text" class="form-control text-light bg-dark" id="foto-input"
-                                name="foto" placeholder="Indique la url de la foto">
-                        </div>
-                    </div>
-                    <div class="col-md">
-                        <div class="form-group">
-                            <label for="ciudad-input">Ciudad:</label>
-                            <input type="text" class="form-control text-light bg-dark" id="ciudad-input"
-                                name="ciudad" list="ciudades-list" placeholder="Indique la ciudad de España">
+                        <div class="col-md">
+                            <div class="form-group">
+                                <label for="ciudad-input">Ciudad:</label>
+                                <input type="text" class="form-control text-light bg-dark" id="ciudad-input"
+                                    name="ciudad" list="ciudades-list" placeholder="Indique la ciudad de España">
                                 <datalist id="ciudades-list">
                                     <option value="A Coruña"></option>
                                     <option value="Álava"></option>
@@ -194,70 +194,70 @@
                                     <option value="Zamora"></option>
                                     <option value="Zaragoza"></option>
                                 </datalist>
+                            </div>
                         </div>
                     </div>
-                </div>
 
-                <div class="info">
+                    <div class="info">
+
+                        <div class="row">
+                            <h3>Cuéntanos más de ti</h3>
+                        </div>
+                        <hr>
+                    </div>
 
                     <div class="row">
-                        <h3>Cuéntanos más de ti</h3>
-                    </div>
-                    <hr>
-                </div>
+                        <div class="col-md">
+                            <div class="form-group">
+                                <label for="peso-input">Peso:</label>
+                                <input type="text" class="form-control text-light bg-dark" id="peso-input" name="peso"
+                                    placeholder="Indique su peso en kgs">
+                            </div>
+                        </div>
+                        <div class="col-md">
+                            <div class="form-group">
+                                <label for="estatura-input">Estatura:</label>
+                                <input type="text" class="form-control text-light bg-dark" id="estatura-input"
+                                    name="estatura" placeholder="Indique su estatura en cms">
+                            </div>
+                        </div>
 
-                <div class="row">
-                    <div class="col-md">
-                        <div class="form-group">
-                            <label for="peso-input">Peso:</label>
-                            <input type="text" class="form-control text-light bg-dark" id="peso-input"
-                                name="peso" placeholder="Indique su peso en kgs">
-                        </div>
-                    </div>
-                    <div class="col-md">
-                        <div class="form-group">
-                            <label for="estatura-input">Estatura:</label>
-                            <input type="text" class="form-control text-light bg-dark" id="estatura-input"
-                                name="estatura" placeholder="Indique su estatura en cms">
-                        </div>
+
+
                     </div>
 
-                    
-
-                </div>
-
-                <div class="row">
-                    <div class="col-md">
-                        <div class="form-group">
-                            <label for="color-pelo-input">Color de pelo:</label>
-                            <select class="form-control text-light bg-dark" id="color-pelo-input" name="color-pelo">
-                                <option value="">Seleccionar color de pelo</option>
-                                <option value="Rubio">Rubio</option>
-                                <option value="Castaño">Castaño</option>
-                                <option value="Negro">Negro</option>
-                                <option value="Pelirrojo">Pelirrojo</option>
-                                <option value="Otros">Otros</option>
-                            </select>
+                    <div class="row">
+                        <div class="col-md">
+                            <div class="form-group">
+                                <label for="color-pelo-input">Color de pelo:</label>
+                                <select class="form-control text-light bg-dark" id="color-pelo-input" name="color-pelo">
+                                    <option value="">Seleccionar color de pelo</option>
+                                    <option value="Rubio">Rubio</option>
+                                    <option value="Castaño">Castaño</option>
+                                    <option value="Negro">Negro</option>
+                                    <option value="Pelirrojo">Pelirrojo</option>
+                                    <option value="Otros">Otros</option>
+                                </select>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-md">
-                        <div class="form-group">
-                            <label for="color-ojos-input">Color de ojos:</label>
-                            <select class="form-control text-light bg-dark" id="color-ojos-input" name="color-ojos">
-                                <option value="">Seleccionar color de ojos</option>
-                                <option value="Azul">Azul</option>
-                                <option value="Verde">Verde</option>
-                                <option value="Marrón">Marrón</option>
-                                <option value="Negro">Negro</option>
-                                <option value="Otros">Otros</option>
-                            </select>
+                        <div class="col-md">
+                            <div class="form-group">
+                                <label for="color-ojos-input">Color de ojos:</label>
+                                <select class="form-control text-light bg-dark" id="color-ojos-input" name="color-ojos">
+                                    <option value="">Seleccionar color de ojos</option>
+                                    <option value="Azul">Azul</option>
+                                    <option value="Verde">Verde</option>
+                                    <option value="Marrón">Marrón</option>
+                                    <option value="Negro">Negro</option>
+                                    <option value="Otros">Otros</option>
+                                </select>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-md">
-                        <div class="form-group">
-                            <label for="aficcion-input">Aficción:</label>
-                            <input type="text" class="form-control text-light bg-dark" id="aficcion-input"
-                                name="aficcion" list="aficciones-list" placeholder="Indique su aficción">
+                        <div class="col-md">
+                            <div class="form-group">
+                                <label for="aficcion-input">Aficción:</label>
+                                <input type="text" class="form-control text-light bg-dark" id="aficcion-input"
+                                    name="aficcion" list="aficciones-list" placeholder="Indique su aficción">
                                 <datalist id="aficciones-list">
                                     <option value="A Coruña"></option>
                                     <option value="Álava"></option>
@@ -266,46 +266,51 @@
                                     <option value="Almería"></option>
                                     <option value="Asturias"></option>
                                 </datalist>
-                        </div>
-                    </div>
-                </div>
-                
-
-                <div class="boton-registro">
-                    <div class="row">
-
-                        <div class="col-md text-center">
-                            <button type="submit" class="btn btn-primary">Register</button>
+                            </div>
                         </div>
                     </div>
 
-                </div>
+
+                    <div class="boton-registro">
+                        <div class="row">
+
+                            <div class="col-md text-center">
+                                <button type="submit" class="btn btn-primary">Register</button>
+                            </div>
+                        </div>
+
+                    </div>
+                </form>
+            </div>
+
+            <a href="index.html">Return to the main page</a>
 
 
+            <script>
+                include("header.html", "#page-header");
+            </script>
 
-
-            </form>
         </div>
-        </p>
 
-        <a href="index.html">Return to the main page</a>
+        <footer>
+            <div class="container-footer">
+                <div id="page-footer"></div>
+                <script>
+                    include("footer.html", "#page-footer");
+                </script>
+            </div>
+
+        </footer>
+
 
     </div>
-    <script>
-        include("header.html", "#page-header");
-    </script>
+
+
+
 
 
 </body>
 
-<footer>
-    <div class="container-footer">
-        <div id="page-footer"></div>
-        <script>
-            include("footer.html", "#page-footer");
-        </script>
-    </div>
 
-</footer>
 
 </html>
