--- a/ezDates/web/index.html
+++ b/ezDates/web/index.html
@@ -31,17 +31,22 @@
     </div>
 
     <div class="container-content">
-        <h2>Dios no existe jeje</h2>
+        <h2>Bienvenido a tu página de citas</h2>
+        <p>¡Encuentra tu pareja ideal!</p>
+        
+        
+        <div class="happy-couples">
+            <img src="https://media.istockphoto.com/id/1365408012/es/foto/pareja-encantadora-mirando-a-trav%C3%A9s-de-la-ventana-del-hotel-en-el-que-se-alojan.jpg?s=612x612&w=0&k=20&c=u1KTn_kpBWoFEzAdbI49cL9HaRopMuJCeFwrNHsjhPw=" alt="Pareja feliz 1">
+            <img src="https://media.istockphoto.com/id/1391740349/es/foto/joven-pareja-heterosexual-de-pie-detr%C3%A1s-de-la-ventana-y-sonriendo.jpg?s=612x612&w=0&k=20&c=NP4dTzelj7Yv3vEy12pmwE129Ozw3Iu5GHYu3V4tM8E=" alt="Pareja feliz 2">
+            <img src="https://media.istockphoto.com/id/1252988880/es/foto/la-familia-de-la-hermosa-mujer-embarazada-y-su-apuesto-marido-sonr%C3%ADen-mientras-pasan-tiempo.jpg?s=612x612&w=0&k=20&c=_gCKHL2f8tsSX6eFooTGRhA9knmbRnSKh13Ql7z-UvE=" alt="Pareja feliz 3">
+        </div>
     </div>
 
     <footer>
-
         <div id="page-footer"></div>
         <script>
             include("footer.html", "#page-footer");
         </script>
-
-
     </footer>
 </body>
 
